src/App.css
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  list-style: none;
  text-transform: uppercase;
}

body {
  background-color: #123;
  color: #edc;
  font-size: 1.2rem;
  padding: 1%;
  line-height: 1.5rem;
}

.main-container {
  max-width: 500px;
  min-width: 375px;
  width:75%;
  margin: auto;
  border: 2px solid #ccc;
  border-radius: 10px;
}

form, .totals, .results {
  background-color: rgba(0, 0, 0, 0.85);
  padding: 5%;
  border: 2px solid #ccc;
  border-radius: 10px;
  margin: 1rem;

}

.animated-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.circle {
  z-index: -1;
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  animation: circleAnim 3s ease-in-out infinite;
}

@keyframes circleAnim {
  0% {
    transform: scale(0);
    opacity: 0;
  }
  60% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(0);
    opacity: 0;
  }
}


label {
  padding: 5px;
}

h2, h1 {
  text-align: center;
  margin-bottom: 25px;
}
.form-group {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
input {
  margin: 2px;
  border: none;
  border-radius: 8px;
  background: #444;
  color: #ccc;
  text-align: right;
  width: 75px;
  height: 1rem;
  padding:10px;
  font-size: 1.5rem;
  font-weight:700;
}

.result {
  margin-left: 10px;
  color:#Fff;
  font-size: 1.5rem;
  font-weight:700;

}

.result-line {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.small {

  text-align: center;
  font-size: .3rem;
  margin-top: 25px;
}

.small a {
  color: #fff;
  text-transform: uppercase;
  font-size: .5rem;
  font-weight: 700;
}

